--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-beforeunload": "^2.5.3",
     "react-dom": "18.2.0",
     "superjson": "1.9.1",
-    "zod": "^3.20.2"
+    "zod": "^3.20.2",
+    "zustand": "^4.3.3"
   },
   "devDependencies": {
     "@types/katex": "^0.16.0",
